Java/Compiladores_Horst/src/compiladorcc/SubLing_C.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SubLing_C.java */
package compiladorcc;
import java.io.*;
import recovery.*;
import semantica.*;
import java.io.FileOutputStream;
import java.io.IOException;

public class SubLing_C/*@bgen(jjtree)*/implements SubLing_CTreeConstants, SubLing_CConstants {/*@bgen(jjtree)*/
  protected JJTSubLing_CState jjtree = new JJTSubLing_CState();// contador de erros sint�ticos
  int contParseError = 0;
  //controla verbose de recupera��o de erros
  boolean debug_recovery;

  public static void main(String args []) throws ParseException
  {
    boolean debug_as = false;
    boolean debug_recovery = false;

        //nome do arquivo a ser lido
    String filename = "";
    String arvore_arquivo = "arquivo_";
    //analisador lexico e sintatico
    SubLing_C parser;
    int i;
    boolean ms = false;

//l� os par�metros passados para o compilador
    for ( i = 0; i < args.length-1; i++) {
                if(args[i].equals("-debug_AS")) {
                  debug_as = true;
                  break;
                }else {
                  System.out.println("Usage is: " + "java SubLing_C [-degub_AS] inputfile");
                  System.exit(0);
                }
    }

//l� da entrada padr�o
        if(args[i].equals("-")) {
                 System.out.println("Reading from standard input...");
                 parser = new SubLing_C(System.in); //cria o analisador sint�tico

        }else {
          // l� do arquivo
           filename = args[args.length-1];
           System.out.println("Reading from file " + filename + ". . .");

           try {
             // cria o analisador sint�tico
             parser = new SubLing_C(new java.io.FileInputStream(filename));

           } catch (java.io.FileNotFoundException e) {
             System.out.println("File " + filename + " not found.");
             return;
           }catch (IOException e) {
             System.out.println("Erro ao abrir o aquivo." + e.getMessage());
             return;
           }
         }

        parser.debug_recovery = debug_recovery;
        if(!debug_as) parser.disable_tracing(); //desabilita verbose do Analisador sint�tico


        SimpleNode root = null;

        try {
                root = parser.program();
        }
        catch(ParseException e) {
                System.err.println(e.getMessage());
        }

        arvore_arquivo += filename;
        FileOutputStream fileOut = null;

        try {
                fileOut = new FileOutputStream(arvore_arquivo);
        }
        catch(Exception e) {
                System.err.println(e.getMessage());
        }
    SimpleNode print = root;
        print.dump(filename, fileOut); //imprime a arvore no arquivo

        SemanticRun parseSem = new SemanticRun();

        try {
                parseSem.programCheck(root);
        }
        catch(SemanticException e) {
                System.out.println(e.getMessage());
        }

        finally {
          System.out.println(parser.token_source.foundLexError() + " Lexical Errors found");
          System.out.println(parser.contParseError + " Syntactic Errors found");
          System.out.println(parseSem.getFoundSemanticError() + " Semantic Errors found");
        }
  }//main

  static public String im  (int x) {
    int k;
    String s;

    s = tokenImage[x];
    k = s.lastIndexOf("\u005c"");

    try { s = s.substring(1,k); }
    catch (StringIndexOutOfBoundsException e) { }
    return s;
  }

  boolean eof; //vari�vel que indica se EOF foi alcan�ado


/**
* consumeUntil, consome tokenns at� alcan�ar um que perten�a ao conjunto de sincroniza��o
* @param g, conjunto de sincroniza��o que ser� usado
* @param e, descreve o erro sint�tico que ocorreu
* @oaram met, n�o terminal que faz a recupera��o dos erros
* @pre-condition nenhuma
* @post-condition nenhuma
*/
 void consumeUntil(RecoverySet g, ParseException e, String met) throws /*/*ParseEOFException*/ ParseException{
        Token tok;
                if(debug_recovery){ //informa sobre a recupera��o
                        System.out.println();
                        System.out.println("*** " + met+ "***");
                        System.out.println("\u0009Syncronizing Set: " + g);
                }
                if(g == null) throw e; // se o conjunto � nulo, propaga a exce��o

                tok = getToken(1); //pega token corrente
                while(!eof){ //se n�o chegou ao fim do arquivo
                        if(g.contains(tok.kind)) { //acha um token no conjunto
                                if(debug_recovery){
                                        System.out.println("\u0009found Syncronizing token: " + im(tok.kind));
                                        break;
                                }
                        }
                        if(debug_recovery){
                                        System.out.println("\u0009ignoring token: " + im(tok.kind));
                        }
                        getNextToken();
                        tok = getToken(1);
                        if(tok.kind == EOF && !g.contains(EOF)) eof = true;
                }
                System.out.println(e.getMessage());
                contParseError++;
                //if(eof) throw new /*ParseEOFException*/("EOF found prematurely.");
 }

/**
* program, � um n�o-terminal que ap�s reconhecer o functlist na entrada, ele tenta achar o EOF,
* @pre-condition: nenhuma
* @post-condition: se n�o conseguir achar o EOF dever� fazer a ressincroniza��o e voltar a analisar o programa
*/
  final public SimpleNode program() throws ParseException {
    trace_call("program");
    try {
                                 /*@bgen(jjtree) PROGRAMA */
        SimpleNode jjtn000 = new SimpleNode(JJTPROGRAMA);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);RecoverySet g = First.program;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
          jj_consume_token(0);
          break;
        case INT:
        case CHAR:
        case VOID:
        case IDENT:
          functlist(g);
          try {
            jj_consume_token(0);
          } catch (ParseException e) {
                consumeUntil(g, e, "program");
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 0:
          case INT:
          case CHAR:
          case VOID:
          case IDENT:
            program();
            break;
          default:
            jj_la1[0] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
      } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("program");
    }
  }

/**
* functlist, � um n�o terminal que diz que o programa � formado por uma lista de fun��es, seguido pelo EOF
* @param g, nome do conjunto de tokens de sincroniza��o
* @pre-condition: nenhuma
* @post-condition: o erro � tratado 
*/
  final public void functlist(RecoverySet g) throws ParseException {
    trace_call("functlist");
    try {
                                            /*@bgen(jjtree) FUNCT_LIST */
        SimpleNode jjtn000 = new SimpleNode(JJTFUNCT_LIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);RecoverySet f = First.functlist.union(g);
      try {
        functdecl(f);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case CHAR:
        case VOID:
        case IDENT:
          functlist(g);
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("functlist");
    }
  }

/**
* functdecl, define como formar a assinatura da fun��o
* @param g, nome do conjunto de tokens de sincroniza��o
* @pre-condition: nenhuma
* @post-condition: 
*/
  final public void functdecl(RecoverySet g) throws ParseException {
    trace_call("functdecl");
    try {
                                            /*@bgen(jjtree) FUNCT_DECL */
        SimpleNode jjtn000 = new SimpleNode(JJTFUNCT_DECL);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);       //assinatura da fun��o
        RecoverySet f = new RecoverySet (R_PAREN);
        RecoverySet h = new RecoverySet (IDENT);
        Token t;
      try {
        try {
          functype(h);
          t = jj_consume_token(IDENT);
          jj_consume_token(L_PAREN);
          paramlist(f);
          jj_consume_token(R_PAREN);
          jj_consume_token(L_COLC);
          functbody(g);
          jj_consume_token(R_COLC);
                  jjtn000.value1 = t.image;
        } catch (ParseException e) {
          consumeUntil(g, e, "functdecl");
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("functdecl");
    }
  }

/**
* paramlist, define como formar a lista de par�metros
* @param g, nome do conjunto de tokens de sincroniza��o
* @pre-condition: nenhuma
* @post-condition: nenhuma
*/
  final public void paramlist(RecoverySet g) throws ParseException {
    trace_call("paramlist");
    try {
                                            /*@bgen(jjtree) PARAM_LIST */
        SimpleNode jjtn000 = new SimpleNode(JJTPARAM_LIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);       // lista de parametros
        RecoverySet f = new RecoverySet (IDENT);
        Token t1 = null, t2 = null;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case CHAR:
          case VOID:
          case IDENT:
            functype(f);
            t1 = jj_consume_token(IDENT);
            label_1:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case L_CHAV:
                ;
                break;
              default:
                jj_la1[3] = jj_gen;
                break label_1;
              }
              jj_consume_token(L_CHAV);
              jj_consume_token(R_CHAV);
            }
            label_2:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case VIRG:
                ;
                break;
              default:
                jj_la1[4] = jj_gen;
                break label_2;
              }
              jj_consume_token(VIRG);
              functype(f);
              t2 = jj_consume_token(IDENT);
              label_3:
              while (true) {
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case L_CHAV:
                  ;
                  break;
                default:
                  jj_la1[5] = jj_gen;
                  break label_3;
                }
                jj_consume_token(L_CHAV);
                jj_consume_token(R_CHAV);
              }
            }
            break;
          default:
            jj_la1[6] = jj_gen;
            ;
          }
          if(t1 != null) {
                jjtn000.value1 = t1.image;
                if(t2 != null) jjtn000.value2 = t2.image;
                }
        } catch (ParseException e) {
    consumeUntil(g, e, "paramlist");
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("paramlist");
    }
  }

/**
* varlist, demonstra como declarar uma vari�vel
* @param g, nome do conjunto de tokens de sincroniza��o
* @pre-condition: nenhuma
* @post-condition: nenhuma
*/
  final public void varlist(RecoverySet g) throws ParseException {
    trace_call("varlist");
    try {
                                        /*@bgen(jjtree) VAR_LIST */
        SimpleNode jjtn000 = new SimpleNode(JJTVAR_LIST);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);   //declara��o de variavel
        Token tipo, nome;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VOID:
            tipo = jj_consume_token(VOID);
            break;
          case INT:
            tipo = jj_consume_token(INT);
            break;
          case CHAR:
            tipo = jj_consume_token(CHAR);
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          nome = jj_consume_token(IDENT);
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case L_CHAV:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_4;
            }
            jj_consume_token(L_CHAV);
            label_5:
            while (true) {
              jj_consume_token(INT_CONSTANT);
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case INT_CONSTANT:
                ;
                break;
              default:
                jj_la1[9] = jj_gen;
                break label_5;
              }
            }
            jj_consume_token(R_CHAV);
          }
          jjtn000.value1 = tipo.image;
          jjtn000.value2 = nome.image;
        } catch (ParseException e) {
     consumeUntil (g, e, "varlist");
        }
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("varlist");
    }
  }

/**
* functype, define qual ser� o tipo das vari�veis
* @param g, nome do conjunto de tokens de sincroniza��o
* @pre-condition: nenhuma
* @post-condition: tipo da vari�vel � definido
*/
  final public void functype(RecoverySet g) throws ParseException {
    trace_call("functype");
    try {
 /*@bgen(jjtree) FUNCT_TYPE */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCT_TYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tipo;
      try {
        try {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VOID:
            tipo = jj_consume_token(VOID);
            break;
          case INT:
            tipo = jj_consume_token(INT);
            break;
          case CHAR:
            tipo = jj_consume_token(CHAR);
            break;
          case IDENT:
            tipo = jj_consume_token(IDENT);
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jjtn000.value1 = tipo.image;
        } catch (ParseException e) {
   consumeUntil (g, e, "functype");
        }
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("functype");
    }
  }
